# daoaiagent

./: .windsurfrules  README.md  package.json  requirement.md
.github/workflows/: deploy.yml
agent/: ARCHITECTURE.md  Dockerfile  README.md  abi.json  ai-output.example  docker-compose.yml  example.env  final_state.json  input.json  main.py  output.json  proposal.json  pyproject.toml  request-schema.json  response-schema.json  server.py  test.py
contracts/: DAOAIAgent.sol  DAOFactory.sol
server/: .gitignore  package.json  tsconfig.json  tsoa.json
server/src/: authentication.ts  index.ts  swagger.json
server/src/controllers/: aia.controller.ts  dao.controller.ts  meeting.controller.ts  proposal.controller.ts
server/src/types/: index.ts  swagger-ui-express.d.ts
subgraph/: networks.json  package.json  schema.graphql  subgraph.yaml
subgraph/abis/: DAOFactory.json
subgraph/src/: dao-factory.ts
subgraph/tests/: dao-factory-utils.ts  dao-factory.test.ts
ui/: package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/aias/: page.tsx
ui/src/app/daos/: page.tsx
ui/src/app/declaration/: page.tsx
ui/src/app/manifesto/: page.tsx
ui/src/app/meetings/: page.tsx
ui/src/app/proposals/: page.tsx
ui/src/components/: status-flow-diagram.tsx
ui/src/components/declaration/: declaration-form.tsx  process-config.tsx
ui/src/components/layout/: main-nav.tsx
ui/src/components/manifesto/: aia-config-panel.tsx  manifesto-form.tsx  process-config.tsx
ui/src/components/proposals/: dao-select-dialog.tsx  (+3 more)
ui/src/contracts/: dao-factory.ts
(+13 files in other folders)
