[project]
name = "dao-agent"
version = "0.1.0"
description = "AI Agent for DAOs"
authors = [
    {name = "backdoor",email = "20609724+doutv@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langgraph (>=0.2.61,<0.3.0)",
    "langchain-openai (>=0.2.14,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "langsmith (>=0.3.4,<0.4.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "cdp-langchain (>=0.0.13,<0.0.14)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"